# pii-detector

./: app.py  config.json  pyproject.toml
db/: database_init.py  models.py  tables.py
domain/: case_file.py
facehugging/: config.json  config.py
ml/: model_loader.py  pii_detector.py
repositories/: case_repository.py
service/: case_file_service.py
