[project]
name = "pack"
version = "0.1.0"
description = "pii detector"
authors = [
    {name = "Anthony",email = "thesuper32203@gmail.com"}
]
license = {text = "none"}
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "transformers (>=4.57.5,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
